# canviewerPy

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py  window.glade
canviewer/: __main__.py  version.py
canviewer/config/: cli.py
canviewer/gui/: EcapAboutDialog.py  MainWindow.py  TabBox.py  __init__.py  dialogs.py  window.py
canviewer/gui/glade/: window.glade
canviewer/ui/: __init__.py  mainwindow.py
ui/: mainwindow.ui
