[tool.poetry]
name = "canviewer"
version = "0.1.0"
description = "Tool that allows the live inspection of can-messages"
authors = ["Tim Lucas Sabelmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
