[tool.poetry]
name = "canviewer"
version = "0.1.0"
description = "Tool that allows the live inspection of can-messages"
authors = ["Tim Lucas Sabelmann", "Martin Pruscha"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8 <3.10"
PySide2 = "^5.15.1"
python-can = "^3.3.4"
cantools = "^35.3.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
